# rps-core

./: README.md  rps-core.cabal  stack.yaml
src/RPS/: Types.hs  TypesInstances.hs
